fixed faulty header structure

--- a/lecture/introduction/notebooks/neuroscience/eeg_introduction.ipynb
+++ b/lecture/introduction/notebooks/neuroscience/eeg_introduction.ipynb
@@ -5,7 +5,9 @@
    "id": "97337cf6",
    "metadata": {},
    "source": [
-    "# Electroencephalography"
+    "# Electroencephalography\n",
+    "\n",
+    "<br/>"
    ]
   },
   {
@@ -14,7 +16,7 @@
    "metadata": {},
    "source": [
     "\n",
-    "### Simply put, Electroencephalography is a (usually) non-invasive method for measuring \"brain activity\".\n",
+    "**Simply put, Electroencephalography is a (usually) non-invasive method for measuring \"brain activity\".**\n",
     "\n",
     "It is a commonly used tool in the neurosciences to establish links between variables of interest such as behavior/cognition/sensory perception/mental processing/differences in personality or psychopathology and their underlying neural mechanims or changes in brain states/traits. An introduction into why and how this is done will be establishd in this chapter.\n",
     "\n",
@@ -46,7 +48,7 @@
    "source": [
     "<br/>\n",
     "\n",
-    "# Chapter overview:\n",
+    "## Chapter overview:\n",
     "    \n",
     "**1. EEG in neuroscience research**\n",
     "- What's the use?\n",
@@ -80,7 +82,7 @@
    "id": "68c672d2",
    "metadata": {},
    "source": [
-    "# Introduction to Electroencephalography"
+    "## Introduction to Electroencephalography"
    ]
   },
   {
@@ -98,7 +100,7 @@
    "id": "1b334682",
    "metadata": {},
    "source": [
-    "#### What's the use?\n",
+    "**What's the use?**\n",
     "\n",
     "The **main selling point of EEG compared to other methods is it's cost-effectiveness (when compared to MEG or fMRI) and portability (limited), combined with high temporal precision**. \n",
     "Allowing for sampling rates of 1024Hz (one sample every 0.001s) and above. As neocortical fast-spiking neurons (association cortex) produce action potentials at a maximal mean frequency of 338 Hz <a href=\"https://www.frontiersin.org/articles/10.3389/fncel.2016.00239/full\" title=\"https://www.frontiersin.org/articles/10.3389/fncel.2016.00239/full\">(Wang et al., 2016)</a>, it should accordingly be possible to map even the fastest changes in neuronaly activity using EEG.\n",
@@ -117,12 +119,11 @@
    "metadata": {},
    "source": [
     "\n",
-    "### The main variables of interest are EEG featuers, most commonly:\n",
+    "**The main variables of interest are EEG featuers, most commonly:**\n",
     "\n",
     "\n",
-    "#### Evoked potentials: \n",
-    "A wave or complex of waves in the contionously measured EEG signal \"elicited by and time-locked to a physiological or nonphysiological\n",
-    "stimulus or event\" <a href=\"https://link.springer.com/content/pdf/bbm%3A978-3-030-04573-9%2F1.pdf\" title=\"https://link.springer.com/content/pdf/bbm%3A978-3-030-04573-9%2F1.pdf\">(Mecarelli, 2019)</a>\n",
+    "**Evoked potentials:**\n",
+    "A wave or complex of waves in the contionously measured EEG signal \"elicited by and time-locked to a physiological or nonphysiological stimulus or event\" <a href=\"https://link.springer.com/content/pdf/bbm%3A978-3-030-04573-9%2F1.pdf\" title=\"https://link.springer.com/content/pdf/bbm%3A978-3-030-04573-9%2F1.pdf\">(Mecarelli, 2019)</a>\n",
     "\n",
     "\n",
     ":::{figure-md} markdown-fig\n",
@@ -130,11 +131,12 @@
     "\n",
     "Evoked potential (p100) after presentation of a visual stimulus on the right side of an participants field of view <a href=\"https://mne.tools/stable/auto_tutorials/evoked/20_visualize_evoked.html\" title=\"https://mne.tools/stable/auto_tutorials/evoked/20_visualize_evoked.html\">(MNE tutorials, visualizing evoked potentials, 2022)\n",
     ":::\n",
+    "   \n",
     "\n",
+    "<br/>\n",
     "\n",
-    "\n",
-    "#### Event-related potentials:\n",
-    "\n",
+    "**Event-related potentials:**\n",
+    "    \n",
     "Same as evoked potentials, but usually show longer latency responses associated with events, as they are not directly thought to be related to basic sensory processing but to \"higher\" cognitive tasks such as decision making, response anticipation, evaluation of stimulus features (such as stimulus\n",
     "salience, template matching, novelty detection)<a href=\"https://link.springer.com/content/pdf/bbm%3A978-3-030-04573-9%2F1.pdf\" title=\"https://link.springer.com/content/pdf/bbm%3A978-3-030-04573-9%2F1.pdf\">(Mecarelli, 2019)</a>.\n",
     "\n",
@@ -151,9 +153,10 @@
     "Event-related-potential: Event-related negativity over central electrodes ~ 50 ms (~ 4µV over FCz) following error commission in a flanker task, 0 is time-locked to a motor response (Master Thesis, Michael Ernst, 2021).\n",
     "```\n",
     "\n",
+    "<br/>\n",
     "\n",
+    "**Neural oscillations:**\n",
     "\n",
-    "#### Neural oscillations: \n",
     "Repetitive, rhythmic patterns in the synchronous activity of neurons or neuron clusters that can be described according to their frequency, phase and amplitude. Usually divided into frequency bands alpha, beta, gamma and so on <a href=\"http://learn.neurotechedu.com/neural%20oscillations/\" title=\"http://learn.neurotechedu.com/neural%20oscillations/\">(NEUROTECHEDU: What are Neural Oscillations?)</a>.\n",
     "\n",
     "<br/>\n",
@@ -180,7 +183,7 @@
     "\n",
     "## 2. Biophysics\n",
     "\n",
-    "### What does \"brain activity\" or \"signal\" mean in the context of EEG?\n",
+    "**What does \"brain activity\" or \"signal\" mean in the context of EEG?**\n",
     "\n",
     "\n",
     "A simple answer would be that we are measuring the **summed activity of a number of postsynaptic potentials (i.e the exchange of electrochemical signals) at the scalp**. \n",
@@ -207,7 +210,7 @@
     "\n",
     "\n",
     "\n",
-    "#### A more complex, neuroanatomically informed answer would encompass: \n",
+    "**A more complex, neuroanatomically informed answer would encompass:**\n",
     "\n",
     "EEG is a method for the (continuous) measurement of spatiotemporally smoothed field potentials above a specific region of the scalp, i.e. the \"extracellular currents reflecting the summed dendritic postsynaptic potentials in thousands to millions of pyramidal cells in parallel alignment\" (Cf. <a href=\"https://www.sciencedirect.com/science/article/abs/pii/S0166223617300243\" title=\"https://www.sciencedirect.com/science/article/abs/pii/S0166223617300243\">Cohen, 2017</a>) measured at an electrode X placed above region/coordinate Y integrated over an area of 10cm² or more (Cf. <a href=\"https://www.nature.com/articles/nrn3241\" title=\"https://www.nature.com/articles/nrn3241\">Buzsáki et al., 2012</a>).\n"
    ]
@@ -219,10 +222,10 @@
    "source": [
     "\n",
     "\n",
-    "## Where does the EEG signal originate from?\n",
+    "### Where does the EEG signal originate from?\n",
     "\n",
     "\n",
-    "#### EEG source localization\n",
+    "**EEG source localization**\n",
     "\n",
     "One disadavantage of the EEG is that it is difficult to estimate where neuronal activity originates from, given only the signal measured at the scalp, as the **spatial resolution of EEG is fairly limited** (centimeter range).\n",
     "\n",
@@ -397,7 +400,7 @@
    "id": "974ddbd8",
    "metadata": {},
    "source": [
-    "# 3. Implications for EEG resarch"
+    "## 3. Implications for EEG resarch"
    ]
   },
   {
@@ -449,7 +452,7 @@
    "source": [
     "<br/>\n",
     "\n",
-    "## Conducting an EEG study in the context of cognitive neuroscience: a loose framework\n",
+    "### Conducting an EEG study in the context of cognitive neuroscience: a loose framework\n",
     "\n",
     "### A. Planning/idea to hypothesis\n",
     "\n",
@@ -513,7 +516,7 @@
    "id": "c11780d2",
    "metadata": {},
    "source": [
-    "#### B. Study design\n",
+    "### B. Study design\n",
     "\n",
     "Now you ideally have not only the starting question/hypothesis but a rough understanding of which areas of your research/study need to be further explored or appear to be sufficient to answer them. Next you can ask yourself how and what data/information you'll need to collect to fill in the gaps of your understanding.\n",
     "\n",
@@ -534,14 +537,14 @@
     "\n",
     "- peregistration of methods? \n",
     "\n",
-    "#### Data collection\n",
+    "**Data collection**\n",
     "   - Standardization; testing-protocol; participant's intructions\n",
     "   - Pilot-testing\n",
     "   - Post-tesing questionnaire\n",
     "   - Experiment log\n",
     "    \n",
     "\n",
-    "#### Math\n",
+    "**Math**\n",
     "```{figure} https://c.tenor.com/_shmV1hUlZMAAAAd/surprised-pikachu.gif\n",
     "---\n",
     "height: 50px\n",
@@ -568,7 +571,7 @@
     "\n",
     "\n",
     "\n",
-    "### D. Making sound inferences?\n",
+    "**D. Making sound inferences?**\n",
     "- biologically/physiologically/theoretically informed and statistically valid?\n",
     "- does your level of certainity (presented/believed) match the degree of evidence?\n",
     "- Generalizability of sample? <a href=\"https://www.apa.org/monitor/2010/05/weird\">(WEIRD?)</a>\n",
@@ -582,7 +585,7 @@
    "source": [
     "<br/>\n",
     "\n",
-    "# 4. Resources"
+    "## 4. Resources"
    ]
   },
   {
@@ -633,7 +636,7 @@
    "id": "b77cfc9d",
    "metadata": {},
    "source": [
-    "# Sources\n",
+    "## Sources\n",
     "\n",
     "Cohen, M. X. (2017). Where does EEG come from and what does it mean?. Trends in neurosciences, 40(4), 208-218.\n",
     "\n",
