--- a/lecture/introduction/notebooks/neuroscience/mne_erp.ipynb
+++ b/lecture/introduction/notebooks/neuroscience/mne_erp.ipynb
@@ -668,7 +668,7 @@
    "source": [
     "<br/>\n",
     "\n",
-    "## 2. calculate the signal average over epochs based on their condition for each channel"
+    "## 2. Calculate the signal average\n"
    ]
   },
   {
@@ -2350,7 +2350,7 @@
    "id": "2c8b654b",
    "metadata": {},
    "source": [
-    "## If you're interested in more complex ways to analyse EEG data you can check-out the following:\n",
+    "### If you're interested in more complex ways to analyse EEG data you can check-out the following:\n",
     "\n",
     "<a href=\"https://mne.tools/stable/auto_examples/time_frequency/index.html\" title=\"https://mne.tools/stable/auto_examples/time_frequency/index.html\">MNE tutorial overview: Time-Frequency analysis</a>\n",
     "\n",
