--- a/lecture/introduction/notebooks/neuroscience/mne_introduction.ipynb
+++ b/lecture/introduction/notebooks/neuroscience/mne_introduction.ipynb
@@ -14,7 +14,7 @@
    "id": "a42de20f",
    "metadata": {},
    "source": [
-    "## What is <a href=\"https://mne.tools/stable/index.html\" title=\"https://mne.tools/stable/index.html\">MNE</a>?\n",
+    "**What is <a href=\"https://mne.tools/stable/index.html\" title=\"https://mne.tools/stable/index.html\">MNE</a>?**\n",
     "\n",
     "\n",
     "\n",
