--- a/lecture/introduction/notebooks/neuroscience/eeg_introduction.ipynb
+++ b/lecture/introduction/notebooks/neuroscience/eeg_introduction.ipynb
@@ -657,9 +657,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "neuro_ai",
    "language": "python",
-   "name": "python3"
+   "name": "neuro_ai"
   },
   "language_info": {
    "codemirror_mode": {
