--- a/lecture/introduction/notebooks/neuroscience/mne_erp.ipynb
+++ b/lecture/introduction/notebooks/neuroscience/mne_erp.ipynb
@@ -2363,9 +2363,9 @@
  "metadata": {
   "celltoolbar": "Edit Metadata",
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "neuro_ai",
    "language": "python",
-   "name": "python3"
+   "name": "neuro_ai"
   },
   "language_info": {
    "codemirror_mode": {
