deploy: 86b2dd4630fe57fbb07fc25e5cefd845e7517a2a

--- a/_sources/introduction/notebooks/neuroscience/mne_introduction.ipynb
+++ b/_sources/introduction/notebooks/neuroscience/mne_introduction.ipynb
@@ -14,7 +14,7 @@
    "id": "a42de20f",
    "metadata": {},
    "source": [
-    "## What is <a href=\"https://mne.tools/stable/index.html\" title=\"https://mne.tools/stable/index.html\">MNE</a>?\n",
+    "**What is <a href=\"https://mne.tools/stable/index.html\" title=\"https://mne.tools/stable/index.html\">MNE</a>?**\n",
     "\n",
     "\n",
     "\n",
@@ -8923,9 +8923,9 @@
  "metadata": {
   "celltoolbar": "Edit Metadata",
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "neuro_ai",
    "language": "python",
-   "name": "python3"
+   "name": "neuro_ai"
   },
   "language_info": {
    "codemirror_mode": {
