deploy: 83c7ff4bc9f3550460b59e9fbeeef4c31d3133f0

--- a/_sources/introduction/notebooks/neuroscience/fmri_intro.ipynb
+++ b/_sources/introduction/notebooks/neuroscience/fmri_intro.ipynb
@@ -2,7 +2,6 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "892b819c",
    "metadata": {},
    "source": [
     "(fmri-chapter)=\n",
@@ -43,7 +42,6 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "5d15e8e0",
    "metadata": {
     "tags": [
      "hide-input",
@@ -154,7 +152,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "12e9c9ea",
    "metadata": {},
    "source": [
     "```{glue:figure} voxel-timeseries-fig\n",
@@ -232,7 +229,6 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "27ef6e35",
    "metadata": {
     "tags": [
      "hide-input",
@@ -305,7 +301,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "37d7fc8b",
    "metadata": {},
    "source": [
     "```{glue:figure} hrf-fig\n",
@@ -405,7 +400,6 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "a26efef6",
    "metadata": {
     "tags": [
      "hide-input",
@@ -496,7 +490,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ae4f8826",
    "metadata": {},
    "source": [
     "```{glue:figure} smoothing-fmri-fig\n",
@@ -514,7 +507,6 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "38981919",
    "metadata": {
     "tags": [
      "hide-input",
@@ -620,7 +612,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "0c0174e5",
    "metadata": {},
    "source": [
     "```{glue:figure} detrending-fmri-fig\n",
@@ -642,7 +633,6 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "a0e3147e",
    "metadata": {
     "tags": [
      "hide-input",
@@ -738,7 +728,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f55c54ab",
    "metadata": {},
    "source": [
     "```{glue:figure} hrf-auditory-fig\n",
@@ -759,7 +748,6 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "76791959",
    "metadata": {
     "tags": [
      "hide-input",
@@ -888,7 +876,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "21825047",
    "metadata": {},
    "source": [
     "```{glue:figure} auditory-fig\n",
@@ -1004,9 +991,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "neuro_ai",
    "language": "python",
-   "name": "python3"
+   "name": "ex"
   },
   "language_info": {
    "codemirror_mode": {
