--- a/_sources/introduction/notebooks/neurodata/version_control.ipynb
+++ b/_sources/introduction/notebooks/neurodata/version_control.ipynb
@@ -134,10 +134,10 @@
    "source": [
     "## Setup\n",
     "#### To follow on your machine, you'll need\n",
-    "1. Bash\n",
-    "2. Git\n",
-    "3. Text editor\n",
-    "4. GitHub account"
+    "1. `Bash`\n",
+    "2. `Git`\n",
+    "3. `Text editor` (e.g. `VScode`)\n",
+    "4. `GitHub` account"
    ]
   },
   {
@@ -433,9 +433,19 @@
    },
    "source": [
     "### `git add`\n",
-    "![](https://i.gifer.com/YKCS.gif)\n",
+    "![](https://media0.giphy.com/media/WOIGpnJ3ye445BUQl4/giphy.gif?cid=ecf05e47xmt8lq20s51l110wfhk5x30q2oi82h36gso6tr6a&rid=giphy.gif&ct=g)\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "subslide"
+    }
+   },
+   "source": [
     "### `git commit`\n",
-    "![](https://www.nydailynews.com/resizer/nJ3qGqkV_0Z6WzIGAWktQ0pKlIE=/415x229/top/arc-anglerfish-arc2-prod-tronc.s3.amazonaws.com/public/JOYD6SAJXDW4JQJSKWAZIY266Y.jpg)"
+    "![](https://tse3.mm.bing.net/th?id=OIP.mXq_4t1uO4_rql81xWnL8gHaEK&pid=Api)"
    ]
   },
   {
@@ -1144,7 +1154,7 @@
    },
    "source": [
     "### Git buffet\n",
-    "![](static/git_github_buffet.png)"
+    "![](../../../static/neurodata/git_github_buffet.png)"
    ]
   },
   {
@@ -1168,9 +1178,8 @@
    },
    "source": [
     "### Sit down and go through a tutorial\n",
-    "![](static/swc_git_website.png)\n",
-    "\n",
-    "![](static/swc_coverage.png)"
+    "![](../../../static/neurodata/swc_git_website.png)\n",
+    "![](../../../static/neurodata/swc_coverage.png)"
    ]
   },
   {
@@ -1182,7 +1191,7 @@
    },
    "source": [
     "### Don't expect to remember everything\n",
-    "![](static/google_stuff.png)"
+    "![](../../../static/neurodata/google_stuff.png)"
    ]
   },
   {
@@ -1195,7 +1204,7 @@
    },
    "source": [
     "### Keep common commands on a sticky note\n",
-    "![](static/sticky_note_on_laptop.jpg)"
+    "![](../../../static/neurodata/sticky_note_on_laptop.jpg)"
    ]
   },
   {
@@ -1207,28 +1216,18 @@
    },
    "source": [
     "#### To learn it, you need to *commit* to doing it\n",
-    "![](static/doing_and_understanding_cleaner.png)"
+    "![](../../../static/neurodata/doing_and_understanding_cleaner.png)"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {
-    "lines_to_next_cell": 2,
     "slideshow": {
-     "slide_type": "slide"
+     "slide_type": "subslide"
     }
    },
    "source": [
-    "## Quick feedback\n",
-    "\n",
-    "##### How much of this tutorial could you follow?\n",
-    "- 100 %\n",
-    "- 75 %\n",
-    "- 50 %\n",
-    "- 25 %\n",
-    "- 0 %\n",
-    "\n",
-    "##### Where are there any major hurdles?"
+    "![](https://raw.githubusercontent.com/louim/in-case-of-fire/master/in_case_of_fire.png)"
    ]
   },
   {
